# final-project-level3-cv-17

./: .gitignore  README.md  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml  issue_template.md
PSD/: CLAHE.py  README.md  finetune.py  main.py  make_data.py  test.py  test_one.py  utils.py  wandb_setup_sharing.py
PSD/datasets/: concat_dataset.py  finetune_datasets.py  our_datasets.py  pretrain_datasets.py
PSD/losses/: energy_functions.py  loss_functions.py
PSD/models/: GCA.py  MSBDN.py  dehazeformer.py
SkyReplacement/: README.md  main.py  requirements.txt
SkyReplacement/Replacement/: replace.py
SkyReplacement/Replacement/SkySelection/: onehotmap.py  select copy.py  skyselect.py  spp.py
SkyReplacement/SkySegmentation/: clear_edge.py  filter_seg.py  preprocess.py
SkyReplacement/SkySegmentation/checkpoint/: segformer.py
SkyReplacement/SkySegmentation/mmseg_config/: readme.md  test.py  train.py  utils.py
SkyReplacement/SkySegmentation/mmseg_config/configs/: default_runtime.py
docs/: .gitmessage.txt
serving/: Makefile  environment.yaml
serving/app/: dehazing.py  frontend.py  main.py  sky_replace.py
serving/app/db/: __init__.py  cloudsample.py  image.py
serving/app/models/: dehazeformer.py  skyselect.py
serving/app/models/Sky/: clear_edge.py  (+5 more)
serving/fastapi/: pyproject.toml
serving/fastapi/app/: __main__.py  dehazing.py  frontend.py  main.py  my_predict.py  sky_replace.py
serving/fastapi/app/db/: __init__.py  image.py
serving/streamlit/: README.md  app.py  my_predict.py  requirements.txt
(+17 files in other folders)
