[tool.poetry]
name = "my-fastapi"
version = "0.1.0"
description = "PSD with FastAPI"
authors = ["omocomo <omocomo@naver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
